--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <p>João, paga o pix</p>
   <p>bora turma !</p>
   <h2>Marx, representante.</h2>
+  <p>Renan, paga a pizza</p>
+  <p>Gaby, para o refri!</p>
 </body>
 </html>
